--- a/pong-styles.css
+++ b/pong-styles.css
@@ -7,12 +7,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: aliceblue;
+  background-color: aliceblue; /* Just experimenting */
 }
 
 #game {
   margin: 10px;
-  border: 5px solid black;
+  border: 5px solid rgb(0, 16, 51);
   left: 0;
   position: absolute;
 }
