--- a/pong-styles.css
+++ b/pong-styles.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: aliceblue; /* Just experimenting */
+  background-image: url(Forest.gif);
 }
 
 #game {
