--- a/pong-styles.css
+++ b/pong-styles.css
@@ -34,6 +34,7 @@ body {
   position: absolute;
   margin: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  color: bisque;
 }
 
 #errors-debug {
