--- a/pong-styles.css
+++ b/pong-styles.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-image: url(Forest.gif);
+  background-image: url(Eyes.gif);
 }
 
 #game {
@@ -34,7 +34,7 @@ body {
   position: absolute;
   margin: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  color: bisque;
+  
 }
 
 #errors-debug {
