--- a/pong-styles.css
+++ b/pong-styles.css
@@ -8,6 +8,10 @@ body {
   padding: 0;
   margin: 0;
   background-image: url(Eyes.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  min-height: 100%;
 }
 
 #game {
@@ -15,7 +19,7 @@ body {
   border: 5px solid rgb(0, 16, 51);
   left: 0;
   position: absolute;
-  background-color: midnightblue;
+  background-color: (25, 25, 112, 0.5);
 }
 
 #left-paddle {
